3rd Commit on Naija Hits

--- a/audio.html
+++ b/audio.html
@@ -112,12 +112,15 @@
 		</main>
 
 		<footer>
-			<p style="text-align:center;">Copyright (c) 2015
-				<span>
+			<p >3rd Floor, NEPZA HQ<br>No. 1 Zambesi Crescent, <br>Maitama, Abuja.<br>
+			<strong>Email:</strong>info@enspire.org.ng<br>
+			<strong>Phone:</strong>09 291 5340</p>
+			<p id="copyright">Copyright (c) 2015 <span>
 					powered by Innovation!
-				</span>
-			</p>
+				</span></p>
+				
 		</footer>
+
 
 	</div>
 
