--- a/contact.html
+++ b/contact.html
@@ -75,16 +75,14 @@
 			<strong>Phone:</strong>09 291 5340</p>
 		</div>
 
-		<footer>
-			<p style="text-align:center;margin-top:-20px;">
-				<p style="text-align:center;">3rd Floor, NEPZA HQ<br>No. 1 Zambesi Crescent, <br>Maitama, Abuja.<br>
+	<footer>
+			<p >3rd Floor, NEPZA HQ<br>No. 1 Zambesi Crescent, <br>Maitama, Abuja.<br>
 			<strong>Email:</strong>info@enspire.org.ng<br>
 			<strong>Phone:</strong>09 291 5340</p>
-			<p style="text-align:center; margin-top:20px;">Copyright (c) 2015</p>
-				<span>
+			<p id="copyright">Copyright (c) 2015 <span>
 					powered by Innovation!
-				</span>
-			</p>
+				</span></p>
+				
 	</footer>
 
 	</div>
