--- a/aboutUs.html
+++ b/aboutUs.html
@@ -2,11 +2,14 @@
 <html>
 
 <head>
-
+	<script type="text/javascript" src="bootstrap/jquerry.js"></script>
+	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 	<meta charset="utf-8"/>
 	<meta name="description" content="Nigeria's no. 1 website for getting the latest hits from our very own music industry. Know what's trending in Naija's music scene and stay up to date with the latest tracks and videos."/>
 	<meta name="keywords" content="Nigeria, Music, Nigerian Music, Videos, Nigerian Music Videos, Nigerian Videos, Latest Naija Hits"/>
 	<link rel="icon" href="img/headphones.jpg" />
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="css/aboutUs.css"/>
 	<title>Naija Hits -- About Us</title>
 
@@ -20,31 +23,11 @@
 
 			<div>
 				<ul id="horNav" style="z-index:1; position:fixed;">
-					<li>
-						<a href="home.html">
-							Home
-						</a>
-					</li>
-					<li>
-						<a href="aboutUs.html">
-							About Us
-						</a>
-					</li>
-					<li>
-						<a href="video.html">
-							Videos
-						</a>
-					</li>
-					<li>
-						<a href="audio.html">
-							Audio
-						</a>
-					</li>
-					<li>
-						<a href="contact.html">
-							Contact
-						</a>
-					</li>
+					<li><a href="home.html">Home</a></li>
+					<li><a href="aboutUs.html">	About Us</a>
+					<li><a href="video.html">Videos</a></li>
+					<li><a href="audio.html">Audio</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 
@@ -81,15 +64,13 @@
 		</div>
 	</div>
 	<footer>
-			<p style="text-align:center;">
-				<p style="text-align:center;">3rd Floor, NEPZA HQ<br>No. 1 Zambesi Crescent, <br>Maitama, Abuja.<br>
+			<p >3rd Floor, NEPZA HQ<br>No. 1 Zambesi Crescent, <br>Maitama, Abuja.<br>
 			<strong>Email:</strong>info@enspire.org.ng<br>
 			<strong>Phone:</strong>09 291 5340</p>
-			<p style="text-align:center; margin-top:20px;">Copyright (c) 2015</p>
-				<span>
+			<p id="copyright">Copyright (c) 2015 <span>
 					powered by Innovation!
-				</span>
-			</p>
+				</span></p>
+				
 	</footer>
 
 </body>
