--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8"/>
 	<meta name="description" content="Nigeria's no. 1 website for getting the latest hits from our very own music industry. Know what's trending in Naija's music scene and stay up to date with the latest tracks and videos."/>
 	<meta name="keywords" content="Nigeria, Music, Nigerian Music, Videos, Nigerian Music Videos, Nigerian Videos, Latest Naija Hits"/>
-	<link rel="icon" href="img/icon.png" />
+	<link rel="icon" href="img/headphones.jpg" />
 	<link rel="stylesheet" type="text/css" href="css/home.css"/>
 	<title>Naija Hits -- Home</title>
 
@@ -27,7 +27,7 @@
 					</li>
 					<li>
 						<a href="audio.html">
-							Tracks
+							Audio
 						</a>
 					</li>
 					<li>
