--- a/video.html
+++ b/video.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8"/>
 	<meta name="description" content="Nigeria's no. 1 website for getting the latest hits from our very own music industry. Know what's trending in Naija's music scene and stay up to date with the latest tracks and videos."/>
 	<meta name="keywords" content="Nigeria, Music, Nigerian Music, Videos, Nigerian Music Videos, Nigerian Videos, Latest Naija Hits"/>
-	<link rel="icon" href="img/icon.png" />
+	<link rel="icon" href="img/headphones.jpg" />
 	<link rel="stylesheet" type="text/css" href="css/video.css"/>
 	<title>Latest Videos</title>
 
@@ -27,7 +27,7 @@
 					</li>
 					<li>
 						<a href="audio.html">
-							Tracks
+							Video
 						</a>
 					</li>
 					<li>
@@ -75,13 +75,15 @@
 			</div>
 		</div>
 
-		<footer>
-			<p style="text-align:center;">Copyright (c) 2015
-				<span>
+	<footer>
+			<p >3rd Floor, NEPZA HQ<br>No. 1 Zambesi Crescent, <br>Maitama, Abuja.<br>
+			<strong>Email:</strong>info@enspire.org.ng<br>
+			<strong>Phone:</strong>09 291 5340</p>
+			<p id="copyright">Copyright (c) 2015 <span>
 					powered by Innovation!
-				</span>
-			</p>
-		</footer>
+				</span></p>
+				
+	</footer>
 
 	</div>
 
